--- a/HERMES/Chat/client/src/App.scss
+++ b/HERMES/Chat/client/src/App.scss
@@ -1,6 +1,8 @@
 $blue :#166FE5;
 $green: #53A521;
 // $border-radius : 0;
+$paragraph-margin-bottom: 0;
+$gray-600 : rgb(245,245,245);
 @import"~bootstrap/scss/bootstrap.scss";
 
 body{
