--- a/HERMES/Chat/client/src/App.scss
+++ b/HERMES/Chat/client/src/App.scss
@@ -25,7 +25,6 @@ body {
 
   scrollbar-width: none;
   &::-webkit-scrollbar {
-
     display: none;
   }
 }
@@ -37,8 +36,7 @@ body {
   border-radius: 50%;
 }
 
-
-.message-intput::placeholder{
+.message-intput::placeholder {
   color: rgba(0, 0, 0, 0.5);
 }
 
@@ -48,3 +46,27 @@ body {
   margin-bottom: 0.5rem;
 }
 
+.react-button-popover {
+  height: 30px;
+}
+
+.react-icon-button {
+  padding: 0 0.25rem 0 0.25rem;
+  font-size: 1rem;
+  transition: 0.25s;
+  &:hover {
+    text-decoration: none;
+    font-size: 2rem;
+  }
+}
+
+.btn:focus {
+  box-shadow: none;
+}
+
+.reactions-div {
+  position: absolute;
+  right: -10px;
+  bottom: -25px;
+  font-size: 0.9rem;
+}
